Created desktop web version of tab component

--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -1,5 +1,6 @@
 $primary:#54acef;
 $gray:#8899a6;
+$gray-light:#D3D9DE;
 $background:#fff;
 //Devices size
-$mobile-screen-size:600px;
+$mobile-screen-size:700px;
