Rename polyfill to flexbox - Created b-icon component - Add input to volume sound in sidebar settings

--- a/src/assets/scss/utils/_flexbox.scss
+++ b/src/assets/scss/utils/_flexbox.scss
@@ -7,3 +7,8 @@
   flex-flow: column wrap;
   -ms-flex-flow: column wrap;
 }
+
+@mixin justify-content($value){
+  justify-content: $value;
+  -webkit-justify-content:$value;
+}
